[tool.poetry]
name = "simple-git-deploy"
version = "0.5.2"
description = "A command-line utility for easy and reliable management of manual deployments from Git repositories"
authors = ["Eduardo Dobay <edudobay@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/edudobay/simple-git-deploy"
repository = "https://github.com/edudobay/simple-git-deploy"
keywords = ["deployment", "automation", "git"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
simple-git-deploy = "simple_git_deploy.cli:main"

[tool.poetry.dependencies]
python = "^3.5"
dateparser = "^0.7.0"
inquirer = "^2.6"

[tool.poetry.dev-dependencies]
mypy = "^0.740.0"
pyflakes = "^2.1"
pytest = "^5.2"
twine = {version = "^2.0", python = "^3.6"}
wheel = "^0.33.6"
black = {version = "19.10b0", allow-prereleases = true, python = "^3.6"}
behave = "^1.2.6"
assertpy = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
